# simple-scheduler

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/stm32/: common.cmake
src/: CMakeLists.txt  led.c  led.h  main.c  sched.h  types.h
